[project]
name = "gofile-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2026.1.4",
    "charset-normalizer>=3.4.4",
    "idna>=3.11",
    "pathvalidate>=3.3.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "urllib3>=2.6.2",
]
